fix(github action): github action 워크플로우 수정
github action 워크플로우 수정

--- a/.github/workflows/shipjs-trigger.yml
+++ b/.github/workflows/shipjs-trigger.yml
@@ -18,7 +18,7 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - run: |
           if [ -f "yarn.lock" ]; then
-            yarn install
+            yarn ins
           else
             npm install
           fi
